--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-font-styles",
+  "name": "css-font-style-keywords",
   "version": "1.0.0",
   "description": "List of CSS font styles.",
   "main": "index.json",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jedmao/css-font-styles.git"
+    "url": "git+https://github.com/jedmao/css-font-style-keywords.git"
   },
   "keywords": [
     "css",
@@ -19,7 +19,7 @@
   "author": "Jed Mao <jedmao@outlook.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jedmao/css-font-styles/issues"
+    "url": "https://github.com/jedmao/css-font-style-keywords/issues"
   },
-  "homepage": "https://github.com/jedmao/css-font-styles#readme"
+  "homepage": "https://github.com/jedmao/css-font-style-keywords#readme"
 }
